--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,10 @@ body::after {
     border: 2px solid #444;
     position: relative;
     z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
 }
 
 h1 {
@@ -100,6 +104,7 @@ p {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
     position: relative;
+    margin-top: 20px;
 }
 
 .download-button:hover {
