--- a/styles.css
+++ b/styles.css
@@ -96,9 +96,9 @@ p {
     text-decoration: none;
     padding: 15px 50px;
     border-radius: 15px;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
+    display: flex; /* Flex to center content */
+    align-items: center; /* Vertically centers the content */
+    justify-content: center; /* Horizontally centers the content */
     border: 4px solid #7a4f1e;
     transition: background 0.3s, transform 0.2s;
     font-weight: bold;
